--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     image: redis:latest
     container_name: ticket-redis
     ports:
-      - "6379:6379"
+      - "16379:6379"
 
   # 3. Zookeeper
   zookeeper:
@@ -36,3 +36,21 @@ services:
       - KAFKA_BROKER_ID=1
     depends_on:
       - zookeeper
+      
+  prometheus:
+    image: prom/prometheus
+    container_name: ticket-prometheus
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    container_name: ticket-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
